[build-system]
requires = ["setuptools>=67", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coniql"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "Interface to control systems via GraphQL over websockets"
dependencies = [
    "typing-extensions;python_version<'3.8'",
    # The Strawberry module is quite volatile so recommend pinning to a
    # specific version and updating to latest after testing.
    "strawberry-graphql==0.190.0",
    "aioca>=1.7",
    "p4p",
    "ruamel.yaml",
    "aiohttp-cors",
    "aioprometheus",
    # Lower versions cause odd behaviour in epicscorelibs when testing the --version flag
    "setuptools>=67",
] # Add project dependencies here, e.g. ["click", "numpy"]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.rst"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "flake8-isort",
    "Flake8-pyproject",
    "pipdeptree",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-rtd-theme-github-versions",
    "tox-direct",
    "types-mock",
    "psutil",                           # Required for benchmarking tests
    "pytest-asyncio>0.17",
    "pytest-aiohttp",
    "types-ujson",
    "ujson",
    "websockets",                       # Required for benchmarking tests
]

[project.scripts]
coniql = "coniql.app:main"

[project.urls]
GitHub = "https://github.com/DiamondLightSource/coniql"

[[project.authors]] # Further authors may be added by duplicating this section
email = "tom.cobbl@diamond.ac.uk"
name = "Tom Cobb"


[tool.setuptools_scm]
write_to = "src/coniql/_version.py"

[tool.mypy]
ignore_missing_imports = true          # Ignore missing stubs in imported modules
plugins = "strawberry.ext.mypy_plugin"

[tool.isort]
float_to_top = true
profile = "black"

[tool.flake8]
extend-ignore = [
    "E203", # See https://github.com/PyCQA/pycodestyle/issues/373
    "F811", # support typing.overload decorator
    "F722", # allow Annotated[typ, some_func("some string")]
]
max-line-length = 88 # Respect black's line length (default 88),
exclude = [".tox", "venv"]


[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --cov=coniql --cov-report term --cov-report xml:cov.xml
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
# Commented out because of https://github.com/DiamondLightSource/coniql/issues/101
# filterwarnings = "error"
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "docs src tests"
asyncio_mode = "auto"

[tool.coverage.run]
data_file = "/tmp/coniql.coverage"

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

# tox must currently be configured via an embedded ini string
# See: https://github.com/tox-dev/tox/issues/999
[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist=True

[testenv:{pre-commit,mypy,pytest,docs}]
# Don't create a virtualenv for the command, requires tox-direct plugin
direct = True
passenv = *
allowlist_externals =
    pytest
    pre-commit
    mypy
    sphinx-build
    sphinx-autobuild
commands =
    pytest: pytest {posargs}
    mypy: mypy src tests {posargs}
    pre-commit: pre-commit run --all-files {posargs}
    docs: sphinx-{posargs:build -EW --keep-going} -T docs build/html
"""
