[metadata]
name = coniql
description = Control system interface in GraphQL.
url = https://github.com/dls-controls/coniql
# author & author_email enclosed in quotes to allow for apostrophes
author = "Tom Cobb"
author_email = "tom.cobb@diamond.ac.uk"
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.7
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src

# Specify any package dependencies below.
install_requires =
    tartiflette-aiohttp
    aioca
    p4p<4.0.0
    ruamel-yaml
    pydantic
    aiohttp-cors

[options.extras_require]
# For development tests/docs
dev =
    black==21.9b0
    isort>5.0
    pytest-cov
    mypy
    flake8-isort
    sphinx-rtd-theme-github-versions
    pre-commit
    websockets
    pytest-asyncio>0.17

[options.packages.find]
where = src

# Specify any package data to be included in the wheel below.
[options.package_data]
coniql =
    *.gql

[options.entry_points]
# Include a command line script
console_scripts =
    coniql = coniql.app:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811,  # support typing.overload decorator

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --cov=coniql --cov-report term --cov-report xml:cov.xml
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = error
    # Ignore deprecation warnings emitted by p4p
    ignore:"@coroutine" decorator is deprecated:DeprecationWarning
    ignore:The loop argument is deprecated:DeprecationWarning

# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths =
    docs src tests
asyncio_mode = auto

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
data_file = /tmp/coniql.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/
